--- a/style.css
+++ b/style.css
@@ -96,15 +96,15 @@
     background-image: url(./image/banner.png);
     background-position: center;
     background-size: cover;
-    height: 200vh;
+    height: 300vh;
 }
 
 .banner .container h1{
     position: absolute;
     top: 40%;
-    right: 13%;
+    right: 10%;
     color: white;
-    font-size: 6rem;
+    font-size: 5rem;
     max-width: 50%;
     font-weight: bold;
     text-transform: uppercase;
@@ -112,7 +112,7 @@
 
 .banner .container p{
     position: absolute;
-    top: 95%;
+    top: 80%;
     right: 20%;
     color: white;
     font-size: 3rem;
@@ -120,10 +120,24 @@
 
 .banner .container div{
     position: absolute;
-    top: 110%;
+    top: 95%;
     right: 35%;
     color: white;
     font-size: 1.2rem;
+}
+
+.banner .middle h2{
+    position: absolute;
+    top: 150%;
+    left: 10%;
+    color: white;
+    font-size: 5rem;
+    max-width: 50%;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+.banner .middle h2 span{
+    color: #fb911f;
 }
 /* RESPONSIVE */
 
